added few hover animations + rotated letters

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="content">
 
-        <div class="letters" id="letterDiv">Iga jest bardzo śliczna!</div>
+        <div class="letters" id="letterDiv">Te literki wcale nie wywołują epilepsji</div>
 
     </div>
 
