added few funny buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
         <div class="letters" id="letterDiv">Te literki wcale nie wywołują epilepsji</div>
 
+        <div class="buttons">
+            <button onclick="toggleRotate()" >Rotate</button>
+            <button onclick="epilepsy()" >Epilepsy</button>
+        </div>
     </div>
 
 
